updated the about me

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
     <div class="text">
         <h2>ABOUT ME</h2>
 
-        <p>My name is Roberto Martinez, Im 22 years old, Hispanic, and a Big basketball fan! So far i've worked in three different places,
-            I've worked with Adidas, MillerLite, and Seneca Foods. My biggest position job was at Seneca Foods as an HR clerk, and i was there for 5 months.
-            A fun Fact, My favorite basketball player is Stephen Curry because he's proof that no matter who you are and what people think of you anything you work for is yours.
+        <p>My name is Roberto Martinez, Im 22 years old, Hispanic, and a Big basketball fan! A fun Fact, 
+            My favorite basketball player is Stephen Curry because he's proof that no matter who you are 
+            and what people think of you anything you work for is yours. I also know a good amount of French and
+            know Both English and Spanish 100%. Im a big geek so i love video games, anime, star wars, harry potter etc.
+            Just an FYI i am House gryffindor. I also have a dog name Luke (names after Luke skywaler) Who is my best friend
+            in the whole world.
         </p>
     </div>
     <div class="text">
